--- a/secret.env
+++ b/secret.env
@@ -1,6 +1,7 @@
-# Clave secreta y algoritmo para firmar los tokens JWT
-secretObj = {
-    SECRET_KEY = "your_secret_key"
-    ALGORITHM = "HS256"
-    ACCESS_TOKEN_EXPIRE_MINUTES = 30
-}
+SECRET_KEY = "your_secret_key"
+ALGORITHM = "HS256"
+ACCESS_TOKEN_EXPIRE_MINUTES = 30
+PORT=5432
+DB_USERNAME=postgres
+PASSWORD=admin123
+DB=camAI
